<resources>
    <string name="app_name">Github Users 2</string>

    <string name="search">search</string>
    <string name="search_username">Search</string>
    <string name="followers">Followers</string>
    <string name="followers_detail">Followers :</string>
    <string name="following">Following</string>
    <string name="following_detail">Following :</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">Location :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company">Company :</string>
    <string name="login">Login</string>
    <string name="github_user_loading">Github User</string>

</resources>